--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "simple text editor",
   "main": "main.js",
   "scripts": {
-
-        "start": "electron ."
-
+    "start": "electron ."
   },
   "author": "Jaime Arturo",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "electron": "^25.1.1"
+    "electron": "^25.1.1",
+    "electron-rebuild": "^3.2.9"
+  },
+  "dependencies": {
+    "electron-remote": "^1.3.0"
   }
 }
